--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 		<!-- Bootstrap CSS -->
 
 		<title>RadarDishes</title>
@@ -14,6 +15,7 @@
 		<header>
 			<button type="button" class="btn btn-primary">Sign in</button>
 		</header>
+		<img src="logoE2.png" alt="Italian Trulli">
 		<h1>RadarDishes</h1>
 		<h2>You make the food. We help you get found.</h2>
 
