--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link rel="stylesheet" href="scss/style.css">
 
 		<!-- Bootstrap CSS -->
 
@@ -15,8 +16,14 @@
 		<header>
 			<button type="button" class="btn btn-primary">Sign in</button>
 		</header>
-		<img src="logoE2.png" alt="Italian Trulli">
+		<nav class="navbar navbar-light bg-light">
+			<a class="navbar-brand" href="#">
+				<img src="logoE" width="30" height="30" class="d-inline-block align-top" alt="RadarDishes logo">
+				Bootstrap
+			</a>
+		</nav>
 		<h1>RadarDishes</h1>
+		<p id="hi"> new </p>
 		<h2>You make the food. We help you get found.</h2>
 
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
