--- a/dashboard.html
+++ b/dashboard.html
@@ -11,12 +11,12 @@
 		</header>
 		<section>
 			<form class="modal-content animate" action="write_page.php" method="post">
-				<input type="text" placeholder="Enter Username" name="uname" required>
-				<input type="text" placeholder="Enter Username" name="uname" required>
-				<input type="text" placeholder="Enter Username" name="uname" required>
-				<input type="text" placeholder="Enter Username" name="uname" required>
-				<input type="text" placeholder="Enter Username" name="uname" required>
-				<input type="text" placeholder="Enter Username" name="uname" required>
+				<input type="text" placeholder="Enter Username" name="name" required>
+				<input type="text" placeholder="Enter Username" name="description" required>
+				<input type="text" placeholder="Enter Username" name="vacancy" required>
+				<input type="text" placeholder="Enter Username" name="promotions" required>
+				<input type="text" placeholder="Enter Username" name="location" required>
+				<input type="text" placeholder="Enter Username" name="radius" required>
 					<button type="submit">Submit</button>
 			</form>
 
