--- a/dashboard.html
+++ b/dashboard.html
@@ -15,8 +15,8 @@
 				<input type="text" placeholder="Enter Username" name="description" required>
 				<input type="text" placeholder="Enter Username" name="vacancy" required>
 				<input type="text" placeholder="Enter Username" name="promotions" required>
-				<input type="text" placeholder="Enter Username" name="location" required>
-				<input type="text" placeholder="Enter Username" name="radius" required>
+				<input type="text" placeholder="Enter Username" name="lat" required>
+				<input type="text" placeholder="Enter Username" name="long" required>
 					<button type="submit">Submit</button>
 			</form>
 
