--- a/main.html
+++ b/main.html
@@ -28,10 +28,10 @@
 							<span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
 						</div>
 						<div class="container">
-							<label for="uname"><b>Username</b></label>
+							<label class="loginfield" for="uname"><b>Username</b></label>
 							<input type="text" placeholder="Enter Username" name="uname" required>
 
-							<label for="pass"><b>Password</b></label>
+							<label class="loginfield" for="pass"><b>Password</b></label>
 							<input type="password" placeholder="Enter Password" name="pass" required>
 
 							<button id="login" type="submit">Login</button>
